@@ -205,4 +205,16 @@
 
   </build>
 
+    <profiles>
+        <profile>
+            <id>jdk17on</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
